tests/baselines/reference/unusedInterfaceinNamespace1.errors.txt
tests/cases/compiler/unusedInterfaceinNamespace1.ts(2,5): error TS6133: 'i1' is declared but its value is never read.


==== tests/cases/compiler/unusedInterfaceinNamespace1.ts (1 errors) ====
    namespace Validation {
        interface i1 {
        ~~~~~~~~~~~~
!!! error TS6133: 'i1' is declared but its value is never read.
    
        }
    }